	used to using these variables without loading calendar.el.

	* calendar/cal-islam.el (diary-islamic-date): Move to end.
	(date, number): Declare where needed.

	* calendar/diary-lib.el (nongregorian-diary-marking-hook)
	(list-sexp-diary-entries): Doc fixes.
	(diary-list-entries): Doc fix.  Remove free variable `entry'.
	(fancy-diary-display): Use dolist, bobp.  Remove free variable `entry'.
	(mark-diary-entries): Remove free variable `entry'.

2008-03-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bookmark.el (bookmark-make): Don't pass the `annotation' to the
	make-record function, instead paste it in afterwards.
	(bookmark-make-record-for-text-file):
	* doc-view.el (doc-view-bookmark-make-record):
	* info.el (Info-bookmark-make-record): Don't mess with annotations.

2008-03-08  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (entry): Declare for compiler part-way
	through.

2008-03-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/diary-lib.el (diary-list-entries)
	(include-other-diary-files, mark-diary-entries)
	(mark-sexp-diary-entries, mark-included-diary-files)
	(diary-entry-time, list-sexp-diary-entries): Remove the special
	handling of ^M that dates back to the use of selective-display.
	(simple-diary-display): Obey setting of pop-up-frames.
	(body, entry): Remove unnecessary declarations.

	* bookmark.el (bookmark-prop-get, bookmark-prop-set): New funs.
	(bookmark-get-annotation, bookmark-set-annotation)
	(bookmark-get-filename, bookmark-set-filename, bookmark-get-position)
	(bookmark-set-position, bookmark-get-front-context-string)
	(bookmark-set-front-context-string, bookmark-get-rear-context-string)
	(bookmark-set-rear-context-string, bookmark-get-handler): Use them.
	* info.el (Info-bookmark-make-record): Don't bother recording point.
	(bookmark-get-filename, bookmark-get-front-context-string)
	(bookmark-get-rear-context-string, bookmark-get-position):
	Don't declare any more.
	(bookmark-get-info-node): Remove.